Shorening the paper for inclusion in ACM Queue.

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -94,8 +94,8 @@
 \input{sections/results}
 \input{sections/challenges}
 \input{sections/use-cases}
-\input{sections/discussion}
-\input{sections/related-works}
+%\input{sections/discussion}
+%\input{sections/related-works}
 \input{sections/conclusion}
 
 %====================================================================
@@ -107,7 +107,7 @@
 
 %====================================================================
 
-\input{sections/appendix}
+%\input{sections/appendix}
 
 %====================================================================
 
