--- a/paper/sections/challenges.tex
+++ b/paper/sections/challenges.tex
@@ -67,7 +67,8 @@
 
 Our analysis of the literature revealed several challenges that need to be considered when developing systems using Blockchain technology.
 In this section, we describe these challenges and limitations.
-In Appendix~\ref{sec:academic}, we survey academic research that is attempting to address some of the challenges.
+%In Appendix~\ref{sec:academic}, we survey academic research that is attempting to address some of the challenges.
+\todo{Reference to full paper.}
 Note that this section is focused on challenges facing Blockchain systems generally, not challenges facing specific applications such as Bitcoin or Ethereum).
 
 \subsection{Scalability and Performance}
