--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -1,7 +1,7 @@
 % !TEX root = ../main.tex
 
 \section{Conclusion}
-In this paper we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
+In this article we answer three common questions regarding Blockchain technology: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.
 We accomplish this goal by using grounded theory to analyze a large corpus of data produced by industry.
 Ultimately, Blockchain technology is neither a panacea nor worthless.
 Instead it is a useful tool in a system developer's toolkit that can be applied when its overhead (consensus and replicated full system provenance) is justified by the system's needs (shared governance and operation, verifiable state, and resilience to data loss).
