--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -1,53 +1,51 @@
 % !TEX root = ../main.tex
 
 \section{Introduction}
-%\rnote{I think that we need to start with the notion of an authenticated data structure or hash chain used to establish the integrity of data, given the title of the paper.  What is the right reference?}
-% Jeremy: The right reference is Haber and Stornetta's work on linked timestamping
-% Jeremy: An alternative meta-citation would be Narayanan17 which traces the history
-% Jeremy: I will eventually fix the first paragraph: Chaum's e-cash doesn't meet the standard definition provided, in particular it is a digital representation of cash issued by a central bank and is not independent of it any way... it just allows electronic payments
+%In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable electronic payments.
+%Later, Chaum, Fiat and Naor~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out electronic cash system.
+%eCash was the first cryptocurrency---\ie ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''%\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
+%However, early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
 
-In 1982, David Chaum~\cite{Cha82} proposed using blind signatures to allow for untraceable electronic payments.
-Later, Chaum, Fiat and Naor~\cite{chaum1988untraceable} expanded this idea into a fully fleshed out electronic cash system.
-eCash was the first cryptocurrency---\ie ``a digital currency in which encryption techniques are used to regulate the generation of units of currency and verify the transfer of funds operating independently of a [nation-state-controlled] central bank.''\footnote{\url{https://en.oxforddictionaries.com/definition/cryptocurrency}}
-However, early cryptocurrencies still required the presence of a central party to help manage the creation and transfer of funds.
-
-Two decades after eCash was first proposed, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}.
-Unlike centralized cryptocurrencies which rely on a set of known entities to operate, Bitcoin uses a proof-of-work-based scheme~\cite{DN93,back1997partial} to allow the general public to maintain the system.
+%Two decades after eCash was first proposed,
+In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency.%~\cite{Nak08}.
+Unlike centralized cryptocurrencies which rely on a set of known entities to operate, Bitcoin uses a proof-of-work-based scheme to allow the general public to maintain the system.%~\cite{DN93,back1997partial} 
 To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} which led the cryptocurrency to become the first to achieve widespread popularity and usage.
 
-At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$60.78 billion).
+At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$182 billion).
 Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
 In particular, we have consistently heard researchers, business executives, and government leadership ask the following three questions: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
+%
+%Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
+%This lack of clarity stems at least in part from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
+In this article, 
+%we attempt to address this ambiguity and 
+we attempt to provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the three questions identified above.
 
-Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
-This lack of clarity stems at least in part from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
-In this paper, we attempt to address this ambiguity and provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the three questions identified above.
+%\begin{table}
+%	\centering
+%	
+%	\begin{tabular}{l|l}
+%		\textbf{Academia} & \textbf{Industry} \\
+%
+%		Increased interest recently & Long-term interest \\
+%		Focused on specific subsystems & Takes a holistic view \\
+%		Technical experts & Use case experts \\ \hline
+%	\end{tabular}
+%	
+%	\caption{Academic vs. industrial sources}
+%	\label{tab:sources}
+%\end{table}
 
-\begin{table}
-	\centering
-	
-	\begin{tabular}{l|l}
-		\textbf{Academia} & \textbf{Industry} \\
-
-		Increased interest recently & Long-term interest \\
-		Focused on specific subsystems & Takes a holistic view \\
-		Technical experts & Use case experts \\ \hline
-	\end{tabular}
-	
-	\caption{Academic vs. industrial sources}
-	\label{tab:sources}
-\end{table}
-
-To accomplish these goals, we conducted a textual analysis of papers on Blockchain technology from non-academic sources (hereafter referred to as \emph{industry}).
-The choice to focus our analysis on literature from industry was based on the unique suitability of that literature (see Table~\ref{tab:sources}) to answer the three questions we identified above:
-First, industry became heavily involved in Blockchain technology before academia and thus has had more time to fully consider its implications.
-Second, industry literature tends to discuss and evaluate Blockchain technology holistically, which provides the broad perspective needed to answer questions one and two.
-Finally, much of industry literature is written by use case experts who are well positioned to answer the third question.
-
-In contrast, academic literature focuses on technical deep dives on Blockchain technology's subsystems and implementations built on Blockchain technology.
-For example, existing academic surveys on Blockchain technology have focused on particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
-In this regard, the existing literature acts as a good compliment to this paper---i.e., researchers interested in Blockchain technology can read this paper to gain a holistic overview of the space and then dive deeply into specific subtopics by reviewing other Blockchain survey papers.
+%To accomplish these goals, we conducted a textual analysis of papers on Blockchain technology from non-academic sources (hereafter referred to as \emph{industry}).
+%The choice to focus our analysis on literature from industry was based on the unique suitability of that literature (see Table~\ref{tab:sources}) to answer the three questions we identified above:
+%First, industry became heavily involved in Blockchain technology before academia and thus has had more time to fully consider its implications.
+%Second, industry literature tends to discuss and evaluate Blockchain technology holistically, which provides the broad perspective needed to answer questions one and two.
+%Finally, much of industry literature is written by use case experts who are well positioned to answer the third question.
+%
+%In contrast, academic literature focuses on technical deep dives on Blockchain technology's subsystems and implementations built on Blockchain technology.
+%For example, existing academic surveys on Blockchain technology have focused on particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
+%In this regard, the existing literature acts as a good compliment to this paper---i.e., researchers interested in Blockchain technology can read this paper to gain a holistic overview of the space and then dive deeply into specific subtopics by reviewing other Blockchain survey papers.
 
 % Jeremy: We invert the common approach: we don't study blockchain people looking at use-cases, we study the use case people looking at blockchain
 %To answer these questions, it is insufficient to consider academic sources alone.
@@ -57,18 +55,18 @@ In this regard, the existing literature acts as a good compliment to this paper-
 %This allowed us to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
 %Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the three questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
 
-Ultimately, our technical analysis was successful at answering our three questions and in this paper we present those answers.
-While some readers may find the results of this paper unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large (both Blockchain experts and non-experts) and provide a common reference point for discussion on Blockchain technology.
+%Ultimately, our technical analysis was successful at answering our three questions and in this paper we present those answers.
+While some readers may find the results described in this article unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large (both Blockchain experts and non-experts) and provide a common reference point for discussion on Blockchain technology.
 %While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
 Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of.
 The results are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas.
-Concretely, our key contributions are:
+%Concretely, our key contributions are:
 
-\begin{enumerate}
-	\item \textbf{Providing a holistic overview of Blockchain technology's technical properties and the capabilities they enable.}
-	We organize the properties of Blockchain technology into three groups: shared governance and operation, verifiable state, and resilience to data loss.
-	Taken together, these properties differentiate Blockchain technology from other distributed technologies.
-	Using these properties, systems built with Blockchain technology have easy access to a range of important capabilities: full-system provenance, auditability, access control, psuedonymity, automatic execution (i.e., smart contracts), and data discoverability.
+%\begin{enumerate}
+%	\item \textbf{Providing a holistic overview of Blockchain technology's technical properties and the capabilities they enable.}
+%	We organize the properties of Blockchain technology into three groups: shared governance and operation, verifiable state, and resilience to data loss.
+%	Taken together, these properties differentiate Blockchain technology from other distributed technologies.
+%	Using these properties, systems built with Blockchain technology have easy access to a range of important capabilities: full-system provenance, auditability, access control, psuedonymity, automatic execution (i.e., smart contracts), and data discoverability.
 	
 %	Blockchain systems are governed and operated by a distributed and decentralized collective of entities that ensure that all operations are valid.
 %	These operations are recorded in an append-only ledger that provides full-system provenance.
@@ -83,14 +81,14 @@ Concretely, our key contributions are:
 %	Provenance information and replication of that information among all miners provides a third important capability: resilience against accidental data loss or malicious modification of the data.
 %	Finally, Blockchain systems can embed executable programs that can compute as appropriate and enjoy the benefits of Blockchain technology's other capabilities.
 	
-	\item \textbf{Identifying groups of applications (i.e., use cases) that are most likely to benefit from Blockchain technology.}
-	Within the literature we analyzed there was a range of potential applications for Blockchain technology.
-	We group these applications into a set of use cases and then discuss the likelihood that individual applications within the use case would benefit from the use of Blockchain technology.
-	Example use cases include cryptocurrencies, asset management, and multi-organization data sharing.
-	
-	\item \textbf{Detailing challenges and limitations related to Blockchain technology.}
-	As part of our review of the literature, we identified several important challenges and limitations for Blockchain technology: scalability, smart contract correctness and dispute resolution, stapling of on-chain tokens to off-chain assets, key management, and regulation.
-	Many of these challenges represent important research questions with interesting potential for future research.
+%	\item \textbf{Identifying groups of applications (i.e., use cases) that are most likely to benefit from Blockchain technology.}
+%	Within the literature we analyzed there was a range of potential applications for Blockchain technology.
+%	We group these applications into a set of use cases and then discuss the likelihood that individual applications within the use case would benefit from the use of Blockchain technology.
+%	Example use cases include cryptocurrencies, asset management, and multi-organization data sharing.
+%	
+%	\item \textbf{Detailing challenges and limitations related to Blockchain technology.}
+%	As part of our review of the literature, we identified several important challenges and limitations for Blockchain technology: scalability, smart contract correctness and dispute resolution, stapling of on-chain tokens to off-chain assets, key management, and regulation.
+%	Many of these challenges represent important research questions with interesting potential for future research.
 %	In this paper, we also survey the academic research that has already been conducted in regards to Blockchain technology.
 
 %	\item \textbf{Describe how Blockchain technology fits in relation to other distributed databases.}
@@ -98,11 +96,11 @@ Concretely, our key contributions are:
 %	This taxonomy demonstrates that Blockchain technology is the most complex of the related distributed databases.
 %	As such, we recommend that applications leverage Blockchain technology only if they need the shared governance, provenance, auditability and resilience provided by Blockchain technology.
 
-	\item \textbf{Leveraging grounded theory to analyze industrial literature while limiting research bias and separating hype from sound technical details.}
-	While there are significant benefits to analyzing industrial literature, there is also a significant amount of hype and imprecise language.
-	To address these limitations, we leveraged the grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
-	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we can answer the three questions we identified while remaining grounded in the data we analyzed.
-	We were also able to shed light on industry's understandings and misunderstandings of Blockchain technology. 
-	
-	
-\end{enumerate}
+%	\item \textbf{Leveraging grounded theory to analyze industrial literature while limiting research bias and separating hype from sound technical details.}
+%	While there are significant benefits to analyzing industrial literature, there is also a significant amount of hype and imprecise language.
+%	To address these limitations, we leveraged the grounded theory methodology~\cite{glaser1965constant,strauss1990basics,corbin1990grounded} (also known as the constant comparative method) to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
+%	Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we can answer the three questions we identified while remaining grounded in the data we analyzed.
+%	We were also able to shed light on industry's understandings and misunderstandings of Blockchain technology. 
+%	
+%	
+%\end{enumerate}
