--- a/paper/sections/results.tex
+++ b/paper/sections/results.tex
@@ -11,11 +11,13 @@
 	\label{fig:technical-properties}
 \end{figure}
 
-Our literature analysis finds three key groupings of properties related to Blockchain technology (see Figure~\ref{fig:technical-properties}).\footnote{A version of this chart that shows the technical primitives that support the technical properties is given in the Appendix (see Figure~\ref{fig:technical-properties-full}).}
+Our literature analysis finds three key groupings of technical properties related to Blockchain technology (see Figure~\ref{fig:technical-properties})
+%.\footnote{A version of this chart that shows the technical primitives that support the technical properties is given in the Appendix (see Figure~\ref{fig:technical-properties-full}).}
 Most importantly, consensus is used to provide \textit{shared governance and operation}.
 In support of shared governance and operation, other technical properties provide \textit{verifiable state} and {resilience to data loss}.
 By themselves, these property groups are nothing new, but used together they define \emph{Blockchain technology}, or \emph{Blockchain} for short.
-In Appendix~\ref{sec:distributed-comparison} we describe how other distributed technologies compare to Blockchain technology.
+\todo{Add reference to appendix in technical report?}
+%In Appendix~\ref{sec:distributed-comparison} we describe how other distributed technologies compare to Blockchain technology.
 
 \subsection{Shared Governance and Operation}
 \label{sec:sharedgov}
